--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
   </head>
-  <body style="font-family:  'Roboto Mono', monospace;">
+  <body style="font-family:  'Roboto Mono', monospace; margin: 0; background-color: #f5f5f5;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
